[package]
name = "second-brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
pulldown-cmark = { version = "0.9.2", default-features = false }
rayon = "1.8"
orca = { git = "https://github.com/scrippt-tech/orca", package = "orca-core" }
clap = "4.4.18"
serde_json = "1.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
